tests/miniJava/neg/005163_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] public int [] java ( ) { return 0 ; } ) { return 0 ; } }
